fix beacon jump on form save

--- a/assets/sass/v2/_forms.scss
+++ b/assets/sass/v2/_forms.scss
@@ -11,6 +11,9 @@
   }
 
   .siw-main-body {
+    .o-form-content {
+      overflow: unset; // prevents beacon from jumping on form save via .o-form-saving
+    }
     .ion-messages-container {
       text-align: center;
       margin-bottom: 1rem;
